--- a/myApp/package.json
+++ b/myApp/package.json
@@ -25,8 +25,10 @@
         "@ionic-native/status-bar": "3.7.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-battery-status": "^1.2.4",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-music-controls": "git+https://github.com/homerours/cordova-music-controls-plugin.git",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
